--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        build-contexts:
+          - SWIFT_IMAGE=swift:5.9-jammy
+          - SWIFT_IMAGE=arm64v8/swift:5.9-jammy
         platform:
           - linux/amd64
           - linux/arm64
-          - darwin/amd64
 
     permissions:
       contents: read
@@ -55,6 +57,7 @@ jobs:
         with:
           context: .
           platforms: ${{ matrix.platform }}
+          build-contexts: ${{ matrix.build-contexts }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -72,7 +75,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "A new Docker ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} image  was built and deployed\n${{ steps.build_and_push_docker_image.outputs }}"
+                    "text": "A new Docker image ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} was built and deployed\n${{ steps.build_and_push_docker_image.outputs }}"
                   }
                 }
               ]
