--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,9 @@ jobs:
       fail-fast: false
       matrix:
         items:
-          - build-arg: SWIFT_IMAGE=swift:5.9-jammy
+          - build-args: SWIFT_IMAGE=swift:5.9-jammy
             platform: linux/amd64
-          - build-arg: SWIFT_IMAGE=arm64v8/swift:5.9-jammy
+          - build-args: SWIFT_IMAGE=swift:5.9-jammy
             platform: linux/arm64
 
     permissions:
@@ -56,7 +56,7 @@ jobs:
         with:
           context: .
           platforms: ${{ matrix.items.platform }}
-          build-args: ${{ matrix.items.build-arg }}
+          build-args: ${{ matrix.items.build-args }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
