--- a/docker/5.9/arm64/Dockerfile
+++ b/docker/5.9/arm64/Dockerfile
@@ -1,12 +1,11 @@
-ARG SWIFT_IMAGE
-FROM $SWIFT_IMAGE
+FROM arm64v8/swift:5.9-jammy
 
 RUN mkdir /workspace
 WORKDIR /workspace
 
 COPY . /workspace
 
-RUN swift build -c release --static-swift-stdlib
+RUN swift build -c release
 
 RUN cp /workspace/.build/release/swaggen /
 
