--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   GITHUB_REGISTRY: ghcr.io
+  GAR_PROJECT_ID: ${{ vars.GAR_PROJECT_ID }}
   GAR_REGISTRY: ${{ vars.GAR_LOCATION }}-docker.pkg.dev
   IMAGE_NAME: ${{ github.repository }}
   SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
@@ -58,7 +59,7 @@ jobs:
         with:
           images: |
             ${{ env.GITHUB_REGISTRY }}/${{ env.IMAGE_NAME }}
-            ${{ env.GAR_REGISTRY }}/${{ env.IMAGE_NAME }}
+            ${{ env.GAR_REGISTRY }}/${{ env.GAR_PROJECT_ID }}/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
             type=ref,event=branch
