--- a/docker/5.9/amd64/Dockerfile
+++ b/docker/5.9/amd64/Dockerfile
@@ -7,6 +7,10 @@ COPY . /workspace
 
 RUN swift build -c release --static-swift-stdlib
 
-RUN cp /workspace/.build/release/swaggen /
+RUN cp /workspace/.build/release/swaggen /usr/local/bin
 
-ENTRYPOINT [ "/swaggen" ]
+RUN mkdir -p /usr/local/share/swaggen && 
+    cp /workspace/Templates /usr/local/share/swaggen &&
+    mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
+
+ENTRYPOINT [ "/usr/local/bin/swaggen" ]
