--- a/docker/5.9/amd64/Dockerfile
+++ b/docker/5.9/amd64/Dockerfile
@@ -9,8 +9,8 @@ RUN swift build -c release --static-swift-stdlib
 
 RUN cp /workspace/.build/release/swaggen /usr/local/bin
 
-RUN mkdir -p /usr/local/share/swaggen && 
-    cp /workspace/Templates /usr/local/share/swaggen &&
-    mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
+RUN mkdir -p /usr/local/share/swaggen \ 
+    && cp /workspace/Templates /usr/local/share/swaggen \ 
+    && mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
 
 ENTRYPOINT [ "/usr/local/bin/swaggen" ]
