Update amd64/Dockerfile and arm64/Dockerfile

--- a/docker/5.9/arm64/Dockerfile
+++ b/docker/5.9/arm64/Dockerfile
@@ -10,7 +10,7 @@ RUN swift build -c release
 RUN cp /workspace/.build/release/swaggen /usr/local/bin
 
 RUN mkdir -p /usr/local/share/swaggen \ 
-    && cp /workspace/Templates /usr/local/share/swaggen \ 
+    && cp -a /workspace/Templates /usr/local/share/swaggen \ 
     && mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
 
 ENTRYPOINT [ "/usr/local/bin/swaggen" ]
