Tweak directory path

--- a/docker/5.9/amd64/Dockerfile
+++ b/docker/5.9/amd64/Dockerfile
@@ -1,16 +1,16 @@
 FROM swift:5.9-jammy
 
-RUN mkdir /workspace
-WORKDIR /workspace
+RUN mkdir /workspace/swaggen
+WORKDIR /workspace/swaggen
 
-COPY . /workspace
+COPY . /workspace/swaggen
 
 RUN swift build -c release --static-swift-stdlib
 
-RUN cp /workspace/.build/release/swaggen /usr/local/bin
+RUN cp /workspace/swaggen/.build/release/swaggen /usr/local/bin
 
 RUN mkdir -p /usr/local/share/swaggen \ 
-    && cp -a /workspace/Templates /usr/local/share/swaggen \ 
+    && cp -a /workspace/swaggen/Templates /usr/local/share/swaggen \ 
     && mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
 
 ENTRYPOINT [ "/usr/local/bin/swaggen" ]
