--- a/docker/5.9/arm64/Dockerfile
+++ b/docker/5.9/arm64/Dockerfile
@@ -1,6 +1,6 @@
 FROM arm64v8/swift:5.9-jammy
 
-RUN mkdir /workspace/swaggen
+RUN mkdir -p /workspace/swaggen
 WORKDIR /workspace/swaggen
 
 COPY . /workspace/swaggen
