--- a/docker/5.9/amd64/Dockerfile
+++ b/docker/5.9/amd64/Dockerfile
@@ -1,7 +1,6 @@
 FROM swift:5.9-jammy
 
-RUN mkdir -p /workspace/swaggen
-WORKDIR /workspace
+WORKDIR /workspace/swaggen
 
 COPY . /workspace/swaggen
 
@@ -12,5 +11,7 @@ RUN cp /workspace/swaggen/.build/release/swaggen /usr/local/bin
 RUN mkdir -p /usr/local/share/swaggen \ 
     && cp -a /workspace/swaggen/Templates /usr/local/share/swaggen \ 
     && mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
+
+WORKDIR /workspace
 
 ENTRYPOINT [ "/usr/local/bin/swaggen" ]
