--- a/docker/5.9/amd64/Dockerfile
+++ b/docker/5.9/amd64/Dockerfile
@@ -1,15 +1,15 @@
 FROM swift:5.9-jammy
 
-WORKDIR /workspace/swaggen
+WORKDIR /swaggen
 
-COPY . /workspace/swaggen
+COPY . /swaggen/
 
 RUN swift build -c release --static-swift-stdlib
 
-RUN cp /workspace/swaggen/.build/release/swaggen /usr/local/bin
+RUN cp /swaggen/.build/release/swaggen /usr/local/bin
 
 RUN mkdir -p /usr/local/share/swaggen \ 
-    && cp -a /workspace/swaggen/Templates /usr/local/share/swaggen \ 
+    && cp -a /swaggen/Templates /usr/local/share/swaggen \ 
     && mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
 
 WORKDIR /workspace
