--- a/docker/5.9/amd64/Dockerfile
+++ b/docker/5.9/amd64/Dockerfile
@@ -1,12 +1,17 @@
 FROM swift:5.9-jammy
 
-RUN mkdir /workspace
-WORKDIR /workspace
+WORKDIR /swaggen
 
-COPY . /workspace
+COPY . /swaggen/
 
 RUN swift build -c release --static-swift-stdlib
 
-RUN cp /workspace/.build/release/swaggen /
+RUN cp /swaggen/.build/release/swaggen /usr/local/bin
 
-ENTRYPOINT [ "/swaggen" ]
+RUN mkdir -p /usr/local/share/swaggen \ 
+    && cp -a /swaggen/Templates /usr/local/share/swaggen \ 
+    && mv /usr/local/share/swaggen/Templates/Swift /usr/local/share/swaggen/Templates/swift
+
+WORKDIR /workspace
+
+ENTRYPOINT [ "/usr/local/bin/swaggen" ]
